==============================================================================
TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
==============================================================================

v6.1.6 Dec 06 2014
. (gazelle) More Station data and some distances
. (eggplant) Made it possible to override the path to data files, etc,
  by specifying a dataDir= argument to TradeEnv(). Default is still ./data

v6.1.5 Dec 04 2014
. (kfsone) "run" --from will now accept a System name
. (kfsone) "update" GUI will now do some sanity checking on prices
. (kfsone) "nav" with -vv will show direct distance left to destination
. (kfsone) Minor speed improvements to "nav"
. (kfsone) Startup optimizations,
. (kfsone) "update" command now always exposes supply and demand,
. (kfsone) "--supply" (-S) is now deprecated for "update" command,

v6.1.4 Dec 01 2014
. (kfsone) "updated.prices" will now contain line removals
. (kfsone) 155 new systems from RedWizard
. (Eggplant!) More Stations
. (kfsone) Fix miscount of jumps when same-system hops were in a route,
. (kfsone) run --jumps=0 now limits to same-system options
. (kfsone) Fixed empty "Jump" lines in nav output for same-system hop

v6.1.3 Nov 30 2014
. (gazelle) More Station and Ship data
. (kfsone) Changed UPDATE command to use places, check for stations, and to
  generate a complete .prices fragment with timestamps for maddavo compat.
. (kfsone) Fixed "run" and "nav" not understanding stations correctly
. (kfsone) "avoid" now handles systems/stations discretely
  - avoiding a station means you won't land there but you can
    pass through the system,
  - avoiding a system means you won't land there or fly thru it,
. (kfsone) Improvements to name disambiguation:
  When specifying a "place" name (system or station) you can resolve
  any ambiguities with a new syntax:
    @name
      Means "this is a system name, don't conflict with stations"
    /name or @/name