@@ -3,6 +3,8 @@ TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
 ==============================================================================
 
 v6.1.6 Dec 06 2014
+. (kfsone) ui_order is now specified in Item.csv rather than per-item
+  (Microbial Furnaces and Mineral Extractors should now be in UI order :)
 . (gazelle) More Station data and some distances
 . (eggplant) Made it possible to override the path to data files, etc,
   by specifying a dataDir= argument to TradeEnv(). Default is still ./data
